--- a/OsmAnd/res/values-da/strings.xml
+++ b/OsmAnd/res/values-da/strings.xml
@@ -40,7 +40,7 @@
 \n
 \nDe underliggende data stammer fra SRTM og ASTER.
 \n
-\nYderligere oplysninger findes på http://osmand.net/docs/user/plugins/contour-lines .</string>
+\nYderligere oplysninger findes på %1$s.</string>
     <string name="srtm_plugin_name">Højdekurver</string>
     <string name="download_select_map_types">Andre kort</string>
     <string name="download_roads_only_item">Kun veje</string>
@@ -263,7 +263,7 @@
     <string name="prefs_plugins">Udvidelser</string>
     <string name="osm_editing_plugin_description">Lav bidrag til OpenStreetMap, et globalt fællesskab, der vedligeholder et omfattende kort over verden og stiller ajourførte open source-data til rådighed for alle brugere.
 \n
-\nDu kan finde en vejledning i, hvordan du redigerer kortet, på vores websted https://osmand.net/docs/user/plugins/osm-editing.</string>
+\nDu kan finde en vejledning i, hvordan du redigerer kortet, på vores websted %1$s.</string>
     <string name="vector_maps_may_display_faster_on_some_devices">Vektorkort vises sandsynligvis hurtigere. Fungerer muligvis ikke godt på nogle enheder.</string>
     <string name="play_commands_of_currently_selected_voice">Vælg en stemme og test den ved at afspille meddelelser:</string>
     <string name="debugging_and_development">OsmAnd udvikling</string>
@@ -1257,7 +1257,7 @@
     <string name="record_plugin_name">Optagelse af tur</string>
     <string name="record_plugin_description">Registrer dine ture eller træninger, og analysér dataene med hensyn til hastighed, akkumulerede stigninger og nedstigninger, højdeprofil osv. Optagede spor kan arkiveres, deles med venner, redigeres og efterbehandles.
 \n
-\nYderligere information på https://osmand.net/docs/user/plugins/trip-recording .</string>
+\nYderligere information på %1$s.</string>
     <string name="rendering_attr_publicTransportMode_name">Bus-, trolleybus-, shuttlebusruter</string>
     <string name="save_track_interval_globally">Logningsinterval</string>
     <string name="save_track_to_gpx_globally_descr">Generel positionslogning til en GPX-fil kan slås til eller fra med GPX-logningsmodulet på kortet.</string>
@@ -1378,7 +1378,7 @@
     <string name="plugin_touringview_name">Touring kortvisning</string>
     <string name="plugin_nautical_descr">Beriger dit kort med oplysninger om sejlruter, navigationslys, nautiske farezoner, zoner med sejlads- eller anløbsrestriktioner osv. For at bruge den skal du downloade de respektive nautiske kort og aktivere stilen \"Søkort\" under \"Konfigurer kort\".
 \n
-\nYderligere læsning på https://osmand.net/docs/user/plugins/nautical-charts .</string>
+\nYderligere læsning på %1$s.</string>
     <string name="plugin_ski_descr">Designet til at navigere i vintersportsområder: Se skipister, skilifter og langrendsspor med farvede linjer, der angiver sværhedsgraden. Hvis du vil gøre brug af dette, skal du aktivere denne udvidelse og også gå til \"Konfigurer kort\" og vælge kortstilen \"Vinter og ski\".</string>
     <string name="plugin_touringview_descr">Aktivering ændrer kortstil til \'Touring\', det er en særlig højdetaljevisning for rejsende og erhvervschauffører. 
 \n 
@@ -4027,7 +4027,7 @@
     <string name="online_routing_example_hint">URL med alle parametre vil se således ud:</string>
     <string name="open_place_reviews_plugin_description">Lav bidrag til OpenPlaceReviews-projektet som f.eks. fotos, anmeldelser, links for offentlige steder som restauranter, hoteller eller museer.
 \n
-\nFind vejledninger om, hvordan du bidrager, på vores websted https://osmand.net/docs/user/plugins/openplacereviews.</string>
+\nFind vejledninger om, hvordan du bidrager, på vores websted %1$s.</string>
     <string name="routing_attr_height_obstacles_description">Den forventede rejsetid vil afspejle højdepåvirkningen. Ruteberegningsvalg kan hjælpe med at undgå stejle opkørsler:</string>
     <string name="release_4_0_beta">- Tilføjet mulighed for at downloade højdekurver i fod
 \n
@@ -4932,7 +4932,7 @@
 \n- lokationsbaserede moduler
 \n- temperatur/tryk-konturlinjer
 \n
-\nVejrdataene leveres af Global Forecast System(GFS, https://www.ncei.noaa.gov/products/weather-climate-models/global-forecast).</string>
+\nVejrdataene leveres af Global Forecast System(GFS, %1$s).</string>
     <string name="shared_string_contours">Konturer</string>
     <string name="empty_screen_view_selected_weather_data">Slå til for at se valgte vejrdata på kortet.</string>
     <string name="shared_string_layers">Lag</string>
