--- a/OsmAnd/res/values-in/strings.xml
+++ b/OsmAnd/res/values-in/strings.xml
@@ -2450,7 +2450,7 @@
     <string name="clear_osm_token">Hapus token OAuth OpenStreetMap</string>
     <string name="osm_editing_plugin_description">Buat kontribusi ke OpenStreetMap, sebuah komunitas global yang membuat peta dunia dan menyediakan data sumber terbuka terbaru kepada pengguna siapa pun.
 \n
-\nAnda dapat menemukan petunjuk cara menyunting peta di situs web kami https://osmand.net/docs/user/plugins/osm-editing .</string>
+\nAnda dapat menemukan petunjuk cara menyunting peta di situs web kami %1$s.</string>
     <string name="choose_audio_stream">Output panduan suara</string>
     <string name="choose_audio_stream_descr">Pilih speaker untuk panduan suara.</string>
     <string name="voice_stream_voice_call">Audio panggilan ponsel (untuk menginterupsi stereo Bluetooth mobil)</string>
@@ -2829,7 +2829,7 @@
     <string name="map_widget_distance_by_tap">Jarak dengan ketukan</string>
     <string name="open_place_reviews_plugin_description">Buat kontribusi ke proyek OpenPlaceReviews, seperti foto, ulasan, atau tautan untuk tempat publik seperti restoran, hotel, atau museum.
 \n
-\nCari petunjuk cara berkontribusi di situs web kami https://osmand.net/docs/user/plugins/openplacereviews .</string>
+\nCari petunjuk cara berkontribusi di situs web kami %1$s.</string>
     <string name="activity_type_riding_name">Berkendara</string>
     <string name="activity_type_winter_name">Musim dingin</string>
     <string name="routing_engine_vehicle_type_hgv">HGV</string>
@@ -4238,7 +4238,7 @@
     <string name="tips_and_tricks_descr">Pertanyaan yang sering ditanyakan, perubahan terkini, dan lainnya.</string>
     <string name="record_plugin_description">Rekam perjalanan atau latihan Anda, dan analisa data tentang kecepatan, kenaikan dan keturunan yang terjadi, profil ketinggian, dll. Trek yang direkam dapat diarsip, dibagikan kepada orang lain, disunting, dan diproses setelah itu.
 \n
-\nBaca lebih lanjut di https://osmand.net/docs/user/plugins/trip-recording .</string>
+\nBaca lebih lanjut di %1$s.</string>
     <string name="rendering_value_translucent_lightgreen_name">Hijau muda translucent</string>
     <string name="access_from_map_description">Tombol menu meluncurkan dasbor daripada menu</string>
     <string name="osm_edit_context_menu_delete">Hapus suntingan OSM</string>
@@ -4250,7 +4250,7 @@
 \n
 \nData berasal dari SRTM dan ASTER.
 \n
-\nBaca lebih lanjut di http://osmand.net/docs/user/plugins/contour-lines .</string>
+\nBaca lebih lanjut di %1$s.</string>
     <string name="download_wikipedia_files">Unduh data Wikipedia tambahan (%1$s MB)\?</string>
     <string name="storage_directory_internal_app">Memori aplikasi internal</string>
     <string name="confirm_usage_speed_cameras">Dalam banyak negara (Jerman, Prancis, Italia, dan lainnya) penggunaan peringatan kamera kecepatan ilegal. OsmAnd tidak mengasumsikan tanggung jawab apa pun jika Anda melanggar hukum. Mohon hanya ketuk \'Iya\' jika Anda memenuhi syarat untuk menggunakan fitur ini.</string>
@@ -4406,7 +4406,7 @@
     <string name="depth_contours">Kontur kedalaman</string>
     <string name="plugin_nautical_descr">Memperkaya peta Anda dengan informasi tentang rute pelayaran, lampu navigasi, zona bahaya bahari, zona dengan batasan pelayaran atau perkaitan, dll. Untuk menggunakan, unduh peta Bahari masing-masing dan aktifkan gaya \"Peta laut\" dalam \"Konfigurasi peta\".
 \n
-\nBaca lebih lanjut di https://osmand.net/docs/user/plugins/nautical-charts .</string>
+\nBaca lebih lanjut di %1$s.</string>
     <string name="audionotes_plugin_description">Ambil catatan audio/foto/video selama perjalanan, menggunakan menu tombol peta atau konteks lokasi.</string>
     <string name="navigate_point_olc">Open Location Code</string>
     <string name="use_opengl_render_descr">Gunakan perenderan OpenGL yang dipercepat oleh perangkat keras (dapat menggunakan lebih banyak baterai, atau tidak bekerja pada perangkat lawas).</string>
@@ -4945,7 +4945,7 @@
 \n- widget berbasis lokasi
 \n- garis isometrik suhu/tekanan
 \n
-\nData cuaca disediakan oleh Sistem Prakiraan Global (GFS, https://www.ncei.noaa.gov/products/weather-climate-models/global-forecast ).</string>
+\nData cuaca disediakan oleh Sistem Prakiraan Global (GFS, %1$s).</string>
     <string name="temperature_widget_desc">Menampilkan suhu untuk tengah peta saat ini.</string>
     <string name="map_widget_sunset_desc">Menampilkan waktu matahari terbit berikutnya atau waktu yang tersisa sampai matahari terbenam.</string>
     <string name="precipitation_widget_desc">Menampilkan curah hujan untuk tengah peta saat ini.</string>
