--- a/OsmAnd/res/values-uk/strings.xml
+++ b/OsmAnd/res/values-uk/strings.xml
@@ -50,7 +50,7 @@
     <string name="prefs_plugins">Плагіни</string>
     <string name="osm_editing_plugin_description">Зробіть внесок в OpenStreetMap — всесвітній проєкт, спільнота якого наповнює мапу світу та надає актуальні відкриті дані кожному користувачеві.
 \n
-\nІнструкції з редагування мапи можна знайти на нашому сайті https://osmand.net/docs/user/plugins/osm-editing.</string>
+\nІнструкції з редагування мапи можна знайти на нашому сайті %1$s.</string>
     <string name="vector_maps_may_display_faster_on_some_devices">Векторні мапи показуються швидше. Підтримуються не всіма пристроями.</string>
     <string name="play_commands_of_currently_selected_voice">Виберіть голос і перевірте його, відтворюючи оголошення:</string>
     <string name="debugging_and_development">Налагодження і розробка OsmAnd</string>
@@ -822,7 +822,7 @@
 \n
 \nВихідні дані походять від SRTM та ASTER.
 \n
-\nПодробиці за посиланням http://osmand.net/docs/user/plugins/contour-lines.</string>
+\nПодробиці за посиланням %1$s.</string>
     <string name="srtm_plugin_name">Ізолінії</string>
     <string name="download_select_map_types">Інші мапи</string>
     <string name="download_roads_only_item">Тільки дороги</string>
@@ -1293,7 +1293,7 @@
     <string name="rendering_value_pedestrian_name">Пішки</string>
     <string name="record_plugin_description">Записуйте свої поїздки або тренування та аналізуйте дані щодо швидкості, накопичених підйомів і спусків, профілю висоти тощо. Записані треки можна архівувати, ділитися з друзями, редагувати та обробляти.
 \n
-\nРозгорнутіший опис за адресою https://osmand.net/docs/user/plugins/trip-recording .</string>
+\nРозгорнутіший опис за адресою %1$s.</string>
     <string name="save_track_to_gpx_globally_descr">Запис розташування до файлу GPX можна увімкнути або вимкнути кнопкою запису GPX на екрані з мапою.</string>
     <string name="save_track_interval_globally">Інтервал запису</string>
     <string name="rendering_attr_publicTransportMode_name">Маршрути автобусів, тролейбусів та маршрутних таксі</string>
@@ -1434,7 +1434,7 @@
     <string name="shared_string_get">Отримати</string>
     <string name="plugin_nautical_descr">Доповнюйте свою мапу даними про вітрильні маршрути, навігаційні вогні, небезпечні морські зони, зони з обмеженнями на плавання або стоянку тощо. Щоб використовувати, завантажте відповідні морські мапи й увімкніть стиль «Морська мапа» у розділі «Налаштувати мапу».
 \n
-\nЯк це зробити - https://osmand.net/docs/user/plugins/nautical-charts .</string>
+\nЯк це зробити - %1$s.</string>
     <string name="osmand_parking_overdue">застаріло</string>
     <string name="action_create">Створити дію</string>
     <string name="action_modify">Змінити дію</string>
@@ -3974,7 +3974,7 @@
     <string name="hillshade_slope_contour_lines">Рельєф / Схили / Ізолінії</string>
     <string name="open_place_reviews_plugin_description">Зробіть свій внесок у проєкт OpenPlaceReviews, наприклад, світлини, відгуки або посилання на громадські місця, такі як ресторани, готелі або музеї.
 \n
-\nІнструкції про те, як зробити свій внесок, можна знайти на нашому вебсайті https://osmand.net/docs/user/plugins/openplacereviews .</string>
+\nІнструкції про те, як зробити свій внесок, можна знайти на нашому вебсайті %1$s.</string>
     <string name="open_place_reviews">OpenPlaceReviews</string>
     <string name="opr_use_dev_url">Використовувати test.openplacereviews.org</string>
     <string name="login_open_place_reviews">Увійти до OpenPlaceReviews</string>
@@ -4898,7 +4898,7 @@
 \n- віджети на основі розташування
 \n- ізолінії температури / тиску
 \n
-\nДані про погоду надає Global Forecast System (GFS, https://www.ncei.noaa.gov/products/weather-climate-models/global-forecast).</string>
+\nДані про погоду надає Global Forecast System (GFS, %1$s).</string>
     <string name="weather_online_cache">Онлайн-кеш</string>
     <string name="weather_wind_kn">вузли</string>
     <string name="weather_wind_kilimeters_per_hour">Кілометрів на годину</string>
